Modify header paragraph | Fix overlap navbar | change bg

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ a {
 
 /* Setup backround of header section div */
 .image__bg {
-    background-image: url('./assets/anaglyph.jpg');
+    background-image: url('./assets/testBg.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
